syntax = "proto3";

package ai.stigmer.agentic.session.v1;

import "ai/stigmer/agentic/session/v1/api.proto";
import "ai/stigmer/agentic/session/v1/io.proto";
import "ai/stigmer/commons/apiresource/rpc_service_options.proto";
import "ai/stigmer/iam/iampolicy/v1/rpcauthorization/method_options.proto";

// SessionQueryController handles read operations for agent sessions.
service SessionQueryController {
  option (ai.stigmer.commons.apiresource.api_resource_kind) = session;

  // Get a single session by ID.
  rpc get(SessionId) returns (Session) {
    option (ai.stigmer.iam.iampolicy.v1.rpcauthorization.config).resource_kind = session;
    option (ai.stigmer.iam.iampolicy.v1.rpcauthorization.config).permission = can_view;
    option (ai.stigmer.iam.iampolicy.v1.rpcauthorization.config).field_path = "value";
    option (ai.stigmer.iam.iampolicy.v1.rpcauthorization.config).error_msg = "unauthorized to get session";
  }

  // List all sessions with pagination and optional filtering.
  rpc list(ListSessionsRequest) returns (SessionList);

  // List all sessions for a specific agent.
  rpc listByAgent(ListSessionsByAgentRequest) returns (SessionList);
}
